Bug 807929: Make DataChannel refcounted r=mcmanus