netwerk/sctp/datachannel/DataChannel.h
@@ -67,11 +67,11 @@ public:
 
   // Called when a DOMString message is received.
   virtual nsresult OnMessageAvailable(nsISupports *aContext,
-                                  const nsACString& message) = 0;
+                                      const nsACString& message) = 0;
 
   // Called when a binary message is received.
   virtual nsresult OnBinaryMessageAvailable(nsISupports *aContext,
-                                        const nsACString& message) = 0;
+                                            const nsACString& message) = 0;
 
   // Called when the channel is connected
   virtual nsresult OnChannelConnected(nsISupports *aContext) = 0;
@@ -127,10 +127,11 @@ public:
     PARTIAL_RELIABLE_TIMED = 2
   } Type;
     
-  DataChannel *Open(const nsACString& label,
-                    Type type, bool inOrder, 
-                    uint32_t prValue, DataChannelListener *aListener,
-                    nsISupports *aContext);
+  already_AddRefed<DataChannel> Open(const nsACString& label,
+                                     Type type, bool inOrder,
+                                     uint32_t prValue,
+                                     DataChannelListener *aListener,
+                                     nsISupports *aContext);
 
   void Close(uint16_t stream);
   void CloseAll();
@@ -188,9 +189,8 @@ private:
                      uint32_t len);
   int32_t SendMsgCommon(uint16_t stream, const nsACString &aMsg, bool isBinary);
 
-  DataChannel *OpenFinish(DataChannel *channel);
+  already_AddRefed<DataChannel> OpenFinish(already_AddRefed<DataChannel> channel);
 
-  void SendOrQueue(DataChannel *aChannel, DataChannelOnMessageAvailable *aMessage);
   void StartDefer();
   bool SendDeferredMessages();
   void SendOutgoingStreamReset();
@@ -198,7 +198,7 @@ private:
   void HandleOpenRequestMessage(const struct rtcweb_datachannel_open_request *req,
                                 size_t length,
                                 uint16_t streamIn);
-  void OpenResponseFinish(DataChannel *channel);
+  void OpenResponseFinish(already_AddRefed<DataChannel> channel);
   void HandleOpenResponseMessage(const struct rtcweb_datachannel_open_response *rsp,
                                  size_t length, uint16_t streamIn);
   void HandleOpenAckMessage(const struct rtcweb_datachannel_ack *ack,
@@ -228,9 +228,9 @@ private:
 
   // NOTE: while these arrays will auto-expand, increases in the number of
   // channels available from the stack must be negotiated!
-  nsAutoTArray<DataChannel*,16> mStreamsOut;
-  nsAutoTArray<DataChannel*,16> mStreamsIn;
-  nsDeque mPending; // Holds DataChannels
+  nsAutoTArray<nsRefPtr<DataChannel>,16> mStreamsOut;
+  nsAutoTArray<nsRefPtr<DataChannel>,16> mStreamsIn;
+  nsDeque mPending; // Holds already_AddRefed<DataChannel>s -- careful!
 
   // Streams pending reset
   nsAutoTArray<uint16_t,4> mStreamsResetting;
@@ -285,10 +285,9 @@ public:
       NS_ASSERTION(mConnection,"NULL connection");
     }
 
-  ~DataChannel()
-    {
-      Close();
-    }
+  ~DataChannel();
+
+  NS_INLINE_DECL_THREADSAFE_REFCOUNTING(DataChannel);
 
   // Close this DataChannel.  Can be called multiple times.
   void Close();
@@ -344,6 +343,8 @@ public:
   void GetLabel(nsAString& aLabel) { CopyUTF8toUTF16(mLabel, aLabel); }
 
   void AppReady();
+
+  void SendOrQueue(DataChannelOnMessageAvailable *aMessage);
 
 protected:
   DataChannelListener *mListener;
@@ -465,7 +466,7 @@ private:
 
   int32_t                           mType;
   // XXX should use union
-  DataChannel                       *mChannel;    // XXX careful of ownership! 
+  nsRefPtr<DataChannel>             mChannel;
   nsRefPtr<DataChannelConnection>   mConnection;
   nsCString                         mData;
   int32_t                           mLen;
